fix cart row position when scrollbar is open

--- a/src/blocks/cart/cart.styl
+++ b/src/blocks/cart/cart.styl
@@ -71,7 +71,7 @@
 			text-transform uppercase
 			color #fff
 			@media tablet_desktop
-				padding 12px 110px 12px 0
+				padding 12px 90px 12px 0
 			@media phone
 				padding 19px 60px 19px 0
 				text-align center
